# api-src/controller/profile-controller.js
@@ -4,7 +4,7 @@ const ProfileService = require('../services/profile-service');
 class ProfileController {
     async getProfile(req, res) {
         const token = jwt.decode(req.headers['x-access-token']);
-        try { 
+        try {
             const result = await ProfileService.findProfileByUserId(req.params.id);
             res.status(200).json(new Message(0, 'Profile GET Result', result));
         }
@@ -19,7 +19,7 @@ class ProfileController {
         const token = jwt.decode(req.headers['x-access-token']);
         const userId = token.id; 
         try {
-            const result = await ProfileService.create(userId, req.body.nickname, req.body.age, req.body.sex, req.body.introduce, req.body.discord_id, req.body.discord_channel);
+            const result = await ProfileService.create(userId, req.body.nickname, req.body.age, req.body.sex, req.body.introduce, req.body.discord_nick, req.body.discord_channel);
             res.status(201).json(new Message(0, 'Profile Updated!', result));
         }
         catch (err) {
